--- a/app/src/main/res/layout/landscape_movie.xml
+++ b/app/src/main/res/layout/landscape_movie.xml
@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-
-    android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:weightSum="1">
+    android:layout_width="match_parent" android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <ImageView
         android:layout_width="wrap_content"
@@ -12,8 +9,7 @@
         android:id="@+id/poster"
         tools:src="@mipmap/ic_launcher"
         android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentBottom="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -21,11 +17,11 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         tools:text="The Do-Over"
         android:id="@+id/tvTitle"
-        android:textSize="20sp"
-        android:padding="10dp"
         android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/poster"
-        android:layout_toEndOf="@+id/poster" />
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginRight="97dp"
+        android:layout_marginEnd="97dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -33,7 +29,6 @@
         tools:text="The life of a bank manager is turned upside down when a friend from his past manipulates him into faking his own death and taking off on an adventure."
         android:id="@+id/tvOverview"
         android:layout_below="@+id/tvTitle"
-        android:layout_toRightOf="@+id/poster"
-        android:layout_toEndOf="@+id/poster" />
-
+        android:layout_alignRight="@+id/tvTitle"
+        android:layout_alignEnd="@+id/tvTitle" />
 </RelativeLayout>
