--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -11,6 +11,8 @@
         android:layout_height="wrap_content"
         android:id="@+id/poster"
         tools:src="@mipmap/ic_launcher"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="20dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
@@ -25,15 +27,21 @@
         android:padding="10dp"
         android:layout_alignParentTop="true"
         android:layout_toRightOf="@+id/poster"
-        android:layout_toEndOf="@+id/poster" />
+        android:layout_toEndOf="@+id/poster"
+        android:textColor="#fff" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
         tools:text="The life of a bank manager is turned upside down when a friend from his past manipulates him into faking his own death and taking off on an adventure."
         android:id="@+id/tvOverview"
+        android:layout_toLeftOf="@id/poster"
+        android:ellipsize="end"
         android:layout_below="@+id/tvTitle"
         android:layout_toRightOf="@+id/poster"
-        android:layout_toEndOf="@+id/poster" />
+        android:layout_alignRight="@id/poster"
+        android:layout_toEndOf="@+id/poster"
+        android:textColor="#fff" />
 
 </RelativeLayout>
