--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -36,11 +36,10 @@
         android:layout_marginLeft="10dp"
         tools:text="The life of a bank manager is turned upside down when a friend from his past manipulates him into faking his own death and taking off on an adventure."
         android:id="@+id/tvOverview"
-        android:layout_toLeftOf="@id/poster"
+        android:lines="7"
+        android:layout_marginRight="10dp"
         android:ellipsize="end"
         android:layout_below="@+id/tvTitle"
-        android:layout_toRightOf="@+id/poster"
-        android:layout_alignRight="@id/poster"
         android:layout_toEndOf="@+id/poster"
         android:textColor="#fff" />
 
