--- a/app/src/main/res/layout/more_info.xml
+++ b/app/src/main/res/layout/more_info.xml
@@ -19,7 +19,7 @@
         android:layout_marginLeft="10dp"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
-        android:textSize="30sp"
+        android:textSize="25sp"
         android:id="@+id/tvTitle"
         android:textColor="#fff" />
 
@@ -29,7 +29,7 @@
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
         android:id="@+id/tvDate"
-        android:textSize="20sp"
+        android:textSize="15sp"
         tools:text="2016-05-18"
         android:layout_marginLeft="10dp"
         android:textColor="#fff"/>
@@ -43,6 +43,8 @@
         android:stepSize="0.1"
         android:numStars="5"
         android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         tools:rating="2"/>
 
     <TextView
@@ -50,7 +52,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         tools:text="The life of a bank manager is turned upside down when a friend from his past manipulates him into faking his own death and taking off on an adventure."
-        android:textSize="20sp"
+        android:textSize="15sp"
         android:id="@+id/tvOverview"
         android:maxLines="10"
         android:scrollbars="vertical"
