--- a/app/src/main/res/layout/more_info.xml
+++ b/app/src/main/res/layout/more_info.xml
@@ -5,12 +5,18 @@
     android:layout_height="match_parent"
     android:background="#000">
 
+    <com.google.android.youtube.player.YouTubePlayerView
+        android:id="@+id/player"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:src="@mipmap/ic_launcher"
         android:layout_marginLeft="10dp"
-        android:id="@+id/ivPoster" />
+        android:id="@+id/ivPoster"
+        />
 
     <TextView
         android:layout_width="wrap_content"
