Finished Flixster w/YouTubePlayer

--- a/app/src/main/res/layout/more_info.xml
+++ b/app/src/main/res/layout/more_info.xml
@@ -4,14 +4,23 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#000">
-
-    <ImageView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:src="@mipmap/ic_launcher"
-        android:layout_marginLeft="10dp"
-        android:id="@+id/ivPoster"
-        />
+        android:layout_height="138dp">
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:src="@mipmap/ic_launcher"
+            android:id="@+id/ivPoster" />
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:src="@drawable/play_button"
+            android:id="@+id/ivPlayIcon" />
+    </RelativeLayout>
 
     <TextView
         android:layout_width="wrap_content"
